--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,65 +1,22 @@
 @import url('https://fonts.cdnfonts.com/css/eurostile-mn');
 @import url('https://fonts.cdnfonts.com/css/euclid-circular-a');
+@import "tailwindcss";
 
-html, body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    height: 100%;
-    overflow-x: hidden;
-    background-color: #000;
-    color:#fff
+@theme {
+    --font-eurostile: "Eurostile MN", sans-serif;
+    --font-euclid: "Euclid Circular A", sans-serif;
+
+    --animate-fade-in: fadeIn 1s ease-in-out;
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+      }
 }
 
-* {
-    box-sizing: border-box;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-
-.main-content {
-    padding: 40px 0;
-}
-
-/* Scrollbar styling for WebKit browsers */
-::-webkit-scrollbar {
-    width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    background: #111; /* Dark track background */
-}
-
-::-webkit-scrollbar-thumb {
-    background: #333; /* Dark thumb color */
-    border-radius: 4px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Lighter on hover */
-}
-
-/* Scrollbar styling for Firefox */
-html {
-    scrollbar-color: #333 #111; /* Thumb color, Track color */
-    scrollbar-width: thin;
-}
